force-app/main/default/objects/Retail_Store__c/fields/Buzz_Id__c.field-meta.xml
<CustomField>
    <fullName>Buzz_Id__c</fullName>
    <description>External Id which refers to the data from Buzz System</description>
    <externalId>true</externalId>
    <label>Buzz Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>