force-app/main/default/objects/Retail_Store__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City in which the Retail Store is Located in.</description>
    <label>City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>