force-app/main/default/objects/Retail_Store__c/fields/Customer_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Customer_Feedback__c</fullName>
    <label>Feedback Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>