force-app/main/default/objects/Retail_Store__c/fields/Most_Advanced_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Advanced_Delivery_Date__c</fullName>
    <label>Most Advanced Delivery Date</label>
    <summarizedField>Store_Supply_Order__c.Delivery_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Store_Supply_Order__c.Order_Status__c</field>
        <operation>equals</operation>
        <value>Booked, Shipped</value>
    </summaryFilterItems>
    <summaryForeignKey>Store_Supply_Order__c.Retail_Store__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>