force-app/main/default/objects/Retail_Store__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Feedback__c</columns>
    <columns>Total_Supply_Spend__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>